# chat

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
chat/: cli.py  modes.py  session.py
